<?xml version="1.0"?>
<package format="2">
  <name>hopalyser</name>
  <version>1.0.0</version>
  <description>The hopalyser package</description>

  <maintainer email="philipp.rothenhaeusler@gmail.com">Philipp Rothenhäusler</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hopalyser_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>hopalyser_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>hopalyser_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
